<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/enter_your_password_here"
        android:importantForAutofill="no"
        android:includeFontPadding="true"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <RadioButton
            android:id="@+id/radio_button_visible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/show_password" />

        <RadioButton
            android:id="@+id/radio_button_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hide_password" />

    </RadioGroup>

    <CheckBox
        android:id="@+id/storePasswordCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:buttonTint="@color/purple_700"
        android:padding="10dp"
        android:text="@string/store_my_password"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:text="@string/ok"
        android:textColor="#000000"
        app:cornerRadius="10dp" />

    <Button
        android:id="@+id/open_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_my_db" />


</LinearLayout>
