<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <EditText
        android:id="@+id/text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foregroundGravity="center_vertical"
        android:gravity="center"
        android:hint="@string/enter_your_password_here"
        android:importantForAutofill="no"
        android:inputType="text" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="center_vertical|clip_horizontal|center|clip_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_button_visible"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:checked="true"
            android:text="@string/show_password" />

        <RadioButton
            android:id="@+id/radio_button_invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:text="@string/hide_password" />

    </RadioGroup>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok"
        app:cornerRadius="20dp" />

</LinearLayout>
